Add email confirmation

--- a/insta/templates/insta/base.html
+++ b/insta/templates/insta/base.html
@@ -33,7 +33,7 @@
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
                         <a class="nav-item nav-link" href="{% url 'insta-home' %}">Home</a>
-                        <a class="nav-item nav-link" href="{% url 'insta-about' %}">About</a>
+                        <a class="nav-item nav-link" href="/admin">Dashboard</a>
                     </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
@@ -61,7 +61,7 @@
                 {% endif%}
                 {% block content %}{% endblock %}
             </div>
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <div class="content-section">
                     <h3>Our Sidebar</h3>
                     <p class='text-muted'>You can put any information here you'd like.
@@ -73,7 +73,7 @@
                         </ul>
                     </p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </main>
     <!-- Optional JavaScript -->
