--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -5,8 +5,8 @@
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4" >Join Today</legend>
-            {{ form|crispy }}
+            <legend class="border-bottom mb-4" >Regiter Now</legend>
+            <table>{{ form|crispy }}</table>
         </fieldset>
         <div class="form-group">
             <button class="btn btn-outline-info" type="submit">Sign Up</button>
