--- a/insta/templates/insta/base.html
+++ b/insta/templates/insta/base.html
@@ -34,12 +34,31 @@
                         <a class="nav-item nav-link" href="{% url 'insta-home' %}">Home</a>
                         <a class="nav-item nav-link" href="/admin">Dashboard</a>
                     </div>
-                    <div class="navbar-nav">
+
+                    <!-- Adding a search form  -->
+                    <div class="col-sm-4 col-md-4 navbar-right">
+
+                        <form class="navbar-form" role="search" action="">
+
+                            <div class="input-group">
+                                <input type="text" class="form-control"
+                                    placeholder="Search " name="image">
+                                <div class="input-group-btn">
+                                    <button class="btn btn-default" type="submit"><i
+                                            class="glyphicon glyphicon-search"></i></button>
+                                </div>
+                            </div>
+
+                        </form>
+                    </div>
+                    <!-- search form end -->
+
+                    <div class="navbar-nav" style="height:50px" >
                         {% if user.is_authenticated %}
-                        <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>  
-                        <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>  
+                        <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+                        <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                         {% else %}
-                       <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                        <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
                         <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
                         {% endif %}
                     </div>
@@ -50,15 +69,15 @@
     <main role="main" class="container">
         <div class="row">
             <!-- <div class="col-md-8"> -->
-                {% if messages %}
-                {% for message in messages %}
-                <div class="alert alert-{{ message.tags}}">
-                    {{ message }}
-                </div>
-                {% endfor%}
-                {% endif%}
-                {% block content %}{% endblock %}
+            {% if messages %}
+            {% for message in messages %}
+            <div class="alert alert-{{ message.tags}}">
+                {{ message }}
             </div>
+            {% endfor%}
+            {% endif%}
+            {% block content %}{% endblock %}
+        </div>
 
         <!-- </div> -->
     </main>
