--- a/insta/templates/insta/home.html
+++ b/insta/templates/insta/home.html
@@ -1,16 +1,21 @@
 {% extends "insta/base.html" %}
 {% block content %}
 {% for post in posts %}
-<article class="media content-section">
+<div class="container">
+    <div class="row">
+        <div class="col col-8"></div>
+    <article class="media content-section">
     <img class="rounded-circle article-img" src="{{ post.image.url }}" alt="">
     <div class="media-body">
         <div class="article-metadata">
             <a class="mr-2" href="#">{{ post.user }}</a>
             <small class="text-muted">{{ post.date_created|date:"F d, Y" }}</small>
         </div>
-        <h2><a class="article-title" href="#">{{ post.name }}</a></h2>
+        <h2><a class="article-title" href="{% url 'insta-detail' post.id %}">{{ post.name }}</a></h2>
         <p class="article-content">{{ post.caption }}</p>
     </div>
 </article>
+</div>
+</div>
 {% endfor %}
 {% endblock content %}
