--- a/insta/static/insta/main.css
+++ b/insta/static/insta/main.css
@@ -94,3 +94,43 @@ body {
   .account-heading {
     font-size: 2.5rem;
   }
+
+.post-container {
+  width: 64%;
+  margin: 2% auto;
+}
+
+.image-card {
+  width: 100%;
+}
+
+.author {
+  display: flex;
+}
+
+.profile-pic {
+  align-self: center;
+  width: 40px;
+  height: 40px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+.profile-pic img {
+  height: 100%;
+  margin: 0 auto;
+}
+
+.author p {
+  margin-left: 6px;
+  align-self: center;
+}
+
+.post-image {
+  width: 100%;
+  height: auto;
+}
+
+.post-image img {
+  width: 100%;
+}
