--- a/insta/templates/insta/base.html
+++ b/insta/templates/insta/base.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'insta/main.css' %}">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     {% if title %}
     <title>Instagram - {{ title }}</title>
     {% else %}
@@ -38,7 +39,8 @@
 
                     <div class="navbar-nav" style="height:50px" >
                         {% if user.is_authenticated %}
-                        <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+                        <a class="nav-item nav-link" href="{% url 'insta-create' %}">Upload Image</a>
+                        ••••••••••                        <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                         <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                         {% else %}
                         <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
