--- a/insta/templates/insta/home.html
+++ b/insta/templates/insta/home.html
@@ -1,16 +1,32 @@
 {% extends "insta/base.html" %}
 {% block content %}
-{% for post in posts %}
-<article class="media content-section">
-    <img class="rounded-circle article-img" src="{{ post.image.url }}" alt="">
-    <div class="media-body">
-        <div class="article-metadata">
-            <a class="mr-2" href="#">{{ post.user }}</a>
-            <small class="text-muted">{{ post.date_created|date:"F d, Y" }}</small>
+
+<div class="post-container">
+    {% for post in posts %}
+
+        <div class="image-card">
+            <div class="author">
+                <div class="profile-pic">
+                    <img src="{{ post.user.profile.image.url }}" alt="">
+                </div>
+                <p>{{ post.user.username }}</p>
+            </div>
+            <div class="post-image">
+                <img src="{{ post.image.url }}" alt="">
+            </div>
+            <a href="">
+                <i class="far fa-heart"></i>
+            </a>
+            <div class="caption">
+                <p>{{ post.caption }}</p>
+            </div>
+            <form action="" method="POST">
+                {% csrf_token %}
+                <input type="text" name="" id="" placeholder="Add a Comment">
+            </form>
         </div>
-        <h2><a class="article-title" href="{% url 'insta-detail' post.id %}">{{ post.name }}</a></h2>
-        <p class="article-content">{{ post.caption }}</p>
-    </div>
-</article>
-{% endfor %}
+
+    {% endfor %}
+</div>
+
 {% endblock content %}
