--- a/insta/templates/insta/image_detail.html
+++ b/insta/templates/insta/image_detail.html
@@ -6,6 +6,10 @@
         <div class="article-metadata">
             <a class="mr-2" href="#">{{ object.user }}</a>
             <small class="text-muted">{{ object.date_created|date:"F d, Y" }}</small>
+            {% if object.user == user %}
+                <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'insta-update' object.id %}">Update</a>
+            {% endif %}
+
         </div>
         <h2 class="article-title">{{ object.name }}</h2>
         <p class="article-content">{{ object.caption }}</p>
