--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -11,7 +11,7 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4" style="" >Regiter Now</legend>
+                <legend class="border-bottom mb-4">Regiter Now</legend>
                 <!-- {{ form|crispy }} -->
         {%for fields in form%}
             {{fields.label}}
