--- a/insta/static/insta/main.css
+++ b/insta/static/insta/main.css
@@ -105,6 +105,7 @@ body {
 }
 
 .author {
+  width: 100%;
   display: flex;
 }
 
@@ -119,6 +120,7 @@ body {
 .profile-pic img {
   height: 100%;
   margin: 0 auto;
+  align-self: center;
 }
 
 .author p {
@@ -127,10 +129,74 @@ body {
 }
 
 .post-image {
+  cursor: pointer;
   width: 100%;
   height: auto;
 }
 
 .post-image img {
+  width: 100%;
+}
+
+.post-modal {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 99999;
+  background-color: rgba(#000,0.5);
+  display: none;
+}
+
+.post-view {
+  display: flex;
+  width: 60%;
+  margin: 10% auto;
+  background-color: #fff;
+}
+
+.modal-image {
+  width: 70%;
+  height: auto;
+  overflow: hidden;
+}
+
+.modal-image img {
+  width: 100%;
+}
+
+.modal-desc {
+  margin: 1%; 
+}
+
+.caption p {
+  margin: 2% 0;
+}
+
+.close {
+  float: right;
+}
+
+.image-container {
+  margin-top: 13px;
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.img-card {
+  width: 32%;
+  height: 300px;
+  margin: 0.4% 0.6%;
+  overflow: hidden;
+}
+
+.img-card {
+  cursor: pointer;
+}
+
+.img-card img {
   width: 100%;
 }
