--- a/insta/templates/insta/home.html
+++ b/insta/templates/insta/home.html
@@ -11,7 +11,7 @@
                 </div>
                 <p>{{ post.user.username }}</p>
             </div>
-            <div class="post-image">
+            <div class="post-image" id="a{{ post.id }}">
                 <img src="{{ post.image.url }}" alt="">
             </div>
             <a href="">
@@ -25,7 +25,37 @@
                 <input type="text" name="" id="" placeholder="Add a Comment">
             </form>
         </div>
+        
 
+        <div class="post-modal" id="image-a{{ post.id }}">
+            <div class="post-view">
+                <div class="modal-image">
+                    <img src="{{ post.image.url }}" alt="">
+                </div>
+                <div class="modal-desc">
+                    <div class="author">
+                        <div class="profile-pic">
+                            <img src="{{ post.user.profile.image.url }}" alt="">
+                        </div>
+                        <p>{{ post.user.username }}</p>
+                        <div class="close">
+                            <i class="fas fa-times"></i>
+                        </div>
+                    </div>
+                    
+                    <div class="caption">
+                        <p>{{ post.caption }}</p>
+                    </div>
+                    <a href="">
+                        <i class="far fa-heart"></i>
+                    </a>
+                    <form action="" method="POST">
+                        {% csrf_token %}
+                        <input type="text" name="" id="" placeholder="Add a Comment">
+                    </form>
+                </div>
+            </div>
+        </div>
     {% endfor %}
 </div>
 
