--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,5 +1,6 @@
 {% extends "insta/base.html" %}
 {% load crispy_forms_tags %}
+{% load static %}
 
 {% block content %}
 <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
@@ -8,25 +9,47 @@
     <p class="text-secondary">{{ user.email }}</p>
 </div>
 
-<div>
-    {% for image in images  %}
-      <div class="image-card" id=img{{image.id}}>
-        <img src="{{ image.image.url }}" alt="">
-      </div>
 
-    <div class="modal1"> 
-        <div class="image-view">
-            <div class="image">
+<div>
+
+<div class="image-container">
+    {% for image in images  %}
+        <div class="img-card" id=a{{image.id}}>
+            <img src="{{ image.image.url }}" alt="">
+        </div>
+
+      <div class="post-modal" id="image-a{{ image.id }}">
+        <div class="post-view">
+            <div class="modal-image">
                 <img src="{{ image.image.url }}" alt="">
             </div>
-            <div class="desc">
-                <p class="user">{{ image.user.username }}</p>
-                <p class="caption">{{ image.caption }}</p>
-            </div>    
-            <button><i class="far fa-heart"></i></button>
+            <div class="modal-desc">
+                <div class="author">
+                    <div class="profile-pic">
+                        <img src="{{ image.user.profile.image.url }}" alt="">
+                    </div>
+                    <p>{{ image.user.username }}</p>
+                    <div class="close">
+                        <i class="fas fa-times"></i>
+                    </div>
+                </div>
+                
+                <div class="caption">
+                    <p>{{ image.caption }}</p>
+                </div>
+                <a href="">
+                    <i class="far fa-heart"></i>
+                </a>
+                <form action="" method="POST">
+                    {% csrf_token %}
+                    <input type="text" name="" id="" placeholder="Add a Comment">
+                </form>
+            </div>
         </div>
     </div>
     {% endfor %}
+</div>
+
 </div>
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
