--- a/insta/static/insta/main.css
+++ b/insta/static/insta/main.css
@@ -30,6 +30,34 @@ body {
   .site-header .navbar-nav .nav-link.active {
     font-weight: 500;
   }
+  .phone {
+    padding-top: 70px;
+    height: 650px;
+    float: right;
+    margin: 10px;
+
+  }
+  .right-column {
+    background: #fff;
+    border: 1px solid #e6e6e6;
+    width: 350px;
+    margin: 10px;
+    padding: 40px;
+  }
+  .instagram-logo {
+    margin: 15px auto;
+
+  }
+  .info {
+    font-weight: 600px;
+    line-height: 20px;
+    font-size: 17px;
+    color: #999;
+  }
+  button img{
+    height: 18px;
+    padding: 0 8px 2px;
+  }
   .column{
 
     float: left;
