--- a/insta/templates/insta/base.html
+++ b/insta/templates/insta/base.html
@@ -12,7 +12,8 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'insta/main.css' %}">
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     {% if title %}
     <title>Instagram - {{ title }}</title>
     {% else %}
@@ -23,7 +24,8 @@
 
 <body>
     <header class="site-header">
-        <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top" style="height:90px; background-color: cadetblue; color: #000;" >
+        <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top"
+            style="height:90px; background-color: cadetblue; color: #000;">
             <div class="container">
                 <a class="navbar-brand mr-4" href="{% url 'insta-home' %}">Instagram</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
@@ -35,9 +37,15 @@
                         <a class="nav-item nav-link" href="{% url 'insta-home' %}">Home</a>
                         <a class="nav-item nav-link" href="/admin">Dashboard</a>
                     </div>
+                    <!-- form search -->
+                    <div class="search-container">
+                        <form action="/action_page.php">
+                          <input type="text" placeholder="Search.." name="search">
+                          <button type="submit"><i class="fa fa-search"></i></button>
+                        </form>
+                      </div>                    <!-- form serach -->
 
-
-                    <div class="navbar-nav" style="height:50px" >
+                    <div class="navbar-nav" style="height:50px">
                         {% if user.is_authenticated %}
                         <a class="nav-item nav-link" href="{% url 'insta-create' %}">Upload Image</a>
                         <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
