--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -3,15 +3,22 @@
 {% block content %}
 
 <div class="container">
-
     <div class="row">
-        <div class="column"><img src="/media/mobile.gif" alt="Mobile" height="600px;"></div>
-        <div class="column">
-                <div class="content-section">
-        <form method="POST">
+        <div class="col-sm-6" style="margin-top:20px;">
+            <img src="/media/mobile.gif" class="phone" alt="">
+        </div>
+
+        <div class="col-sm-6">
+          <div class="right-column text-center">
+              <img src="/media/insta.png" class="instagram-logo" alt="Instagram image" style="width:150px;">
+                <p class="info">Sign up to see photo from your friends</p>
+                <button type="submit" class="btn btn-primary btn-block"> <img src="/media/fb.png" class="fb-logo" alt=""> Login in with facebook</button>
+              <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Regiter Now</legend>
+                <legend class="border-bottom mb-4">
+                    <img src="/media/instagram.svg" alt="">
+                </legend>
                 <!-- {{ form|crispy }} -->
         {%for fields in form%}
             {{fields.label}}
