--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -13,7 +13,8 @@
               <img src="/media/insta.png" class="instagram-logo" alt="Instagram image" style="width:150px;">
                 <p class="info">Sign up to see photo from your friends</p>
                 <button type="submit" class="btn btn-primary btn-block"> <img src="/media/fb.png" class="fb-logo" alt=""> Login in with facebook</button>
-              <form method="POST">
+                <p class="or">OR</p>
+                <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">
